// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha alpha-picker"
    style="width: 316px; height: 16px;"
  >
    <div
      class="rc-alpha-control"
      style="border-radius: 2px;"
    >
      <div
        class="rc-alpha-control__checkboard"
        style="border-radius: 2px;"
      >
        <div
          class="rc-checkboard"
          style="background: url("null");"
        />
      </div>
      <div
        class="rc-alpha-control__gradient"
        style="background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); border-radius: 2px;"
      />
      <div
        class="rc-alpha-control__container"
      >
        <div
          class="rc-alpha-control__pointer"
          style="left: 100%;"
        >
          <div
            class="rc-alpha__pointer"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alpha renders vertically 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha alpha-picker"
    style="width: 20px; height: 200px;"
  >
    <div
      class="rc-alpha-control rc-alpha-control--vertical"
      style="border-radius: 2px;"
    >
      <div
        class="rc-alpha-control__checkboard"
        style="border-radius: 2px;"
      >
        <div
          class="rc-checkboard"
          style="background: url("null");"
        />
      </div>
      <div
        class="rc-alpha-control__gradient"
        style="background: linear-gradient(rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); border-radius: 2px;"
      />
      <div
        class="rc-alpha-control__container"
      >
        <div
          class="rc-alpha-control__pointer"
          style="left: 0px; top: 100%;"
        >
          <div
            class="rc-alpha__pointer rc-alpha__pointer--vertical"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlphaPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha__pointer"
  />
</DocumentFragment>
`;
